# InovaNiver

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh
app/: config.py  crud.py  models.py  schemas.py
app/routers/: birthdays.py
sql/: create_tables.sql
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
templates/partials/: modal_form.html  table.html
