[project]
name = "inovaniver"
version = "0.1.0"
description = "Sistema de registro e notificação de aniversários - InovaMind"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "alembic>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
